@@ -55,6 +55,7 @@ version 2.7.0 (??/??/????):
 	  rjoly for testing)
 	* When sending data using in-band-bytestreams, interpret the block-size
 	  attribute as the size of the BASE64-encoded representation of the data.
+	* Validate the hash on incoming BoB data objects (for custom smileys etc.).
 
 	Yahoo:
 	* Attempt to better handle transparent proxies interfering with HTTP-based
